--- a/english.html
+++ b/english.html
@@ -343,6 +343,8 @@ Error message and password prompt
 
 <li>Saraleh would have liked it</li>
 
+<li>Single parent children</li>
+
 <li>soul</li>
 
 <li>The blue is already here</li>
@@ -8228,7 +8230,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen sister]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8518,7 +8520,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20200212220505011" modified="20200212222025177" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
+<div created="20200212220505011" modified="20200212222410693" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>
 [img[pictures/achot-coen.jpg]]
 
@@ -8894,6 +8896,15 @@ He did his best at raising us as good people, and in most cases he even succeede
 
 
  &lt;&lt;heblink [[שרלה הייתה אוהבת את זה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212222159882" modified="20200212222401550" tags="[[True stories]] Children" title="Single parent children">
+<pre>
+[img[pictures/yeladim-chad.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Single parent children]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[ילדים חד הוריים]]&gt;&gt;
 </pre>
 </div>
 <div created="20191113140141218" modified="20200212160530160" tags="Metafiction" title="soul">
