--- a/english.html
+++ b/english.html
@@ -315,6 +315,8 @@ Error message and password prompt
 
 <li>Keep on bleeding</li>
 
+<li>Kitchens</li>
+
 <li>Laundry</li>
 
 <li>logo-bg</li>
@@ -8232,7 +8234,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Houses [[Iris the daughter]]" title="$:/StoryList">
+<div list="Houses [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8447,8 +8449,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 </pre>
 </div>
 <div created="20200212215510131" modified="20200212220610491" tags="[[Monkeys with car keys]] [[The team]]" title="Animal farm">
-<pre>
-[img[pictures/bechavat-hachayot.jpg]]
+<pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Animal farm]]&quot;&gt;&gt;
@@ -8523,8 +8524,7 @@ coming soon as possible
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
 <div created="20200212220505011" modified="20200212222410693" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
-<pre>
-[img[pictures/achot-coen.jpg]]
+<pre>[img[pictures/achot-coen.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Coen sister]]&quot;&gt;&gt;
 
@@ -8666,9 +8666,8 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212223417925" modified="20200212223635642" tags="Kitchens" title="Houses">
-<pre>
-[img[pictures/batim.jpg]]
+<div created="20200212223417925" modified="20200212224353147" tags="Kitchens" title="Houses">
+<pre>[img[pictures/batim.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Houses]]&quot;&gt;&gt;
 
@@ -8752,6 +8751,15 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212224246020" modified="20200212224446551" tags="Houses [[Food addicts]]" title="Kitchens">
+<pre>
+[img[pictures/kitchens.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[מטבחים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212164125847" modified="20200212165652184" tags="Metafiction [[Here in the Ghetto]]" title="Laundry">
@@ -8911,8 +8919,7 @@ He did his best at raising us as good people, and in most cases he even succeede
 </pre>
 </div>
 <div created="20200212222159882" modified="20200212222401550" tags="[[True stories]] Children" title="Single parent children">
-<pre>
-[img[pictures/yeladim-chad.jpg]]
+<pre>[img[pictures/yeladim-chad.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Single parent children]]&quot;&gt;&gt;
 
