--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="מטבחים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212223402685" title="$:/temp/search">
+<div created="20161023184814872" modified="20200212224300749" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10814,7 +10814,7 @@ Is where I want to be
 &lt;&lt;list-links filter:&quot;[tag[בתי קפה]]&quot;&gt;&gt;
 </pre>
 </div>
-<div created="20180704182012305" modified="20200212223719352" tags="מטבחים" title="בתים">
+<div created="20180704182012305" modified="20200212224602904" tags="מטבחים" title="בתים">
 <pre>[img[pictures/batim.jpg]]
 
 !!![[הצוות]]:
@@ -10827,7 +10827,7 @@ Is where I want to be
 
 &lt;&lt;list-links filter:&quot;[tag[בתים]]&quot;&gt;&gt;
 
-&lt;&lt;englink [[Kitchens]]&gt;&gt;</pre>
+&lt;&lt;englink [[Houses]]&gt;&gt;</pre>
 </div>
 <div created="20171207221132771" modified="20181020120612545" tags="בתים אימהות" title="ג'ו ונורמה">
 <pre>[img[pictures/jo-ve-norma.jpg]]
@@ -14981,7 +14981,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20190622111859895" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200212224622550" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -14992,6 +14992,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;list-links filter:&quot;[tag[מטבחים]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[Kitchens]]&gt;&gt;
 
 
 
