--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מטבחים [[האחיות כהן]]" title="$:/StoryList">
+<div list="הסופרנוס [[כמה שירים כבר אפשר להמציא בכלל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212224300749" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213142820789" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10903,11 +10903,12 @@ Is where I want to be
 
 חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
-<div created="20170829074025058" modified="20190310131147652" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20200213143216555" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 [[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]] האהוב, שנתן את כל כולו.
 
+&lt;&lt;englink [[James Gandolfini]]&gt;&gt;
 </pre>
 </div>
 <div created="20181003131016162" modified="20190126102054297" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
@@ -12517,7 +12518,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
 </div>
-<div created="20170826115226554" modified="20190617133519811" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
+<div created="20170826115226554" modified="20200213143254987" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12529,7 +12530,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 [[כשארטי מכוון רובה לטוני|https://www.youtube.com/watch?v=VawiILj2w3M&amp;feature=youtu.be]] - לאחר שהבין שטוני שרף את המסעדה הקודמת שלו - טוני מצליח לעצור אותו, כשנשבע באימא שלו. ארטי נסוג, כשעל פניו הבעת [[כן בטח|https://www.youtube.com/watch?v=C6iAzyhm0p0]]. הוא משתולל במידה, נכנס לאוטו, ונוסע.
 
 
-&lt;&lt;list-links filter:&quot;[tag[הסופרנוס]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[הסופרנוס]]&quot;&gt;&gt;
+
+&lt;&lt;englink [[The Soprnos]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20161112205825183" modified="20171029224334940" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
@@ -14981,7 +14987,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200212224622550" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213142735709" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
