--- a/english.html
+++ b/english.html
@@ -311,6 +311,8 @@ Error message and password prompt
 
 <li>Iry</li>
 
+<li>James Gandolfini</li>
+
 <li>John Irving</li>
 
 <li>Keep on bleeding</li>
@@ -358,6 +360,8 @@ Error message and password prompt
 <li>The lab</li>
 
 <li>The sisters' questionnaire</li>
+
+<li>The Sopranos</li>
 
 <li>The team</li>
 
@@ -8234,7 +8238,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Houses [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8254,7 +8258,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200212171030840" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213142253972" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8471,10 +8475,11 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20191113144209430" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200213141856951" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
 
-Yoyo:
+!!![[[Yoyo]]:
+
 This is Berry, who was a prince that mostly played and became a king who wrote about how we sat near the aspirin river and composed Ibn Gabirol and sang Meir Ariel and no further words.
 
 
@@ -8675,10 +8680,10 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200212191618559" modified="20200212201808243" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
+<div created="20200212191618559" modified="20200213142607905" tags="[[A friend]] Music [[On the road to somewhere]]" title="How many songs can you even invent at all">
 <pre>[img[pictures/kama-shirim.jpg]]
 
-
+[[BY MATTI CASPI|https://www.youtube.com/watch?v=Ya4Cago3vVY]]
 
 &lt;&lt;list-links filter:&quot;[tag[How many songs can you even invent at all]]&quot;&gt;&gt;
 
@@ -8736,6 +8741,16 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200213142319100" modified="20200213142657540" tags="[[Outer sisters]] Films TV [[TV Series]] [[The Sopranos]]" title="James Gandolfini">
+<pre>
+[img[pictures/james-gandolfini.jpg]]
+
+
+ &lt;&lt;heblink [[ג'יימס גנדולפיני]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
 
@@ -8753,9 +8768,8 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200212224446551" tags="Houses [[Food addicts]]" title="Kitchens">
-<pre>
-[img[pictures/kitchens.jpg]]
+<div created="20200212224246020" modified="20200213143317038" tags="Houses [[Food addicts]]" title="Kitchens">
+<pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
 
@@ -8980,6 +8994,16 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 
 
+
+</pre>
+</div>
+<div created="20200213142916801" modified="20200213143152931" tags="[[TV Series]] TV Kitchens Mothers" title="The Sopranos">
+<pre>
+[img[pictures/the-sopranos.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[The Sopranos]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[הסופרנוס]]&gt;&gt;
 
 </pre>
 </div>
