--- a/index.html
+++ b/index.html
@@ -12518,7 +12518,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.</pre>
 </div>
-<div created="20170826115226554" modified="20200213143254987" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
+<div created="20170826115226554" modified="20200213143823059" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12532,7 +12532,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[הסופרנוס]]&quot;&gt;&gt;
 
-&lt;&lt;englink [[The Soprnos]]&gt;&gt;
+&lt;&lt;englink [[The Sopranos]]&gt;&gt;
 
 
 </pre>
