--- a/english.html
+++ b/english.html
@@ -8229,7 +8229,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200212190344125" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200213144439974" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8258,7 +8258,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213142253972" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213144306945" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8475,10 +8475,10 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200213141856951" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200213144433447" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
 
-!!![[[Yoyo]]:
+!!![[Yoyo]]:
 
 This is Berry, who was a prince that mostly played and became a king who wrote about how we sat near the aspirin river and composed Ibn Gabirol and sang Meir Ariel and no further words.
 
@@ -8741,10 +8741,13 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
  &lt;&lt;heblink [[אירי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213142319100" modified="20200213142657540" tags="[[Outer sisters]] Films TV [[TV Series]] [[The Sopranos]]" title="James Gandolfini">
+<div created="20200213142319100" modified="20200213144413213" tags="[[Outer sisters]] Films TV [[TV Series]] [[The Sopranos]]" title="James Gandolfini">
 <pre>
 [img[pictures/james-gandolfini.jpg]]
 
+!!![[The team]]: 
+
+The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave it all.
 
  &lt;&lt;heblink [[ג'יימס גנדולפיני]]&gt;&gt;
 
