--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הסופרנוס [[כמה שירים כבר אפשר להמציא בכלל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'יימס גנדולפיני]] [[כמה שירים כבר אפשר להמציא בכלל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10903,8 +10903,10 @@ Is where I want to be
 
 חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
-<div created="20170829074025058" modified="20200213143216555" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20200213144221905" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
+
+!!![[הצוות]]:
 
 [[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]] האהוב, שנתן את כל כולו.
 
