--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'יימס גנדולפיני]] [[כמה שירים כבר אפשר להמציא בכלל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213142820789" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213145039564" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10903,7 +10903,7 @@ Is where I want to be
 
 חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
-<div created="20170829074025058" modified="20200213144221905" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20200213145738120" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 !!![[הצוות]]:
@@ -12754,8 +12754,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20181121183813748" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20200213145828705" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
+
 ''
 המתוקה''
 
@@ -12780,7 +12781,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא חתולה יפה שמשפחתה היגרה ממרוקו [[לפריז|בבוקר]].
 
-היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].</pre>
+היא [[אוהבת|אהבה]] ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת [[שהכל במקום|ההיררכיה במקרר]]. במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת, אחרי שסיימה לספור את  הקופה, ולדעת [[שלא לחינם למדה ראיית חשבון|המטבח על פי ז'נבייב]].
+
+&lt;&lt;englink [[Genevieve]]&gt;&gt;</pre>
 </div>
 <div created="20180927093957805" modified="20200212143854342" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="זמירות חג">
 <pre>[img[pictures/zemirot-chag.jpg]]
