--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחות כהן]] אלכסנדרה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10319,12 +10319,17 @@ well,
 בירידה מרוטשילד, [[בשיינקין 59|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f:0x3662145826c17cb6!2m22!2m2!1i80!2i80!3m1!2i20!16m16!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!2m2!1m1!1e6!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], בבוקר, אכרם, חמודי וג'וני, לפעמים פוטנה גם, מחכים עם חיוך, עם החומוס, מרק חם, ופלאפל טוב, לדרים בסביבה וברחוב.
 </pre>
 </div>
-<div created="20170331205112322" modified="20180510194317312" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
+<div created="20170331205112322" modified="20200213150758475" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
 <pre>[img[pictures/alexandra.jpg]]
 
 !!![[גורה]]:
 
-ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
+ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].
+
+&lt;&lt;englink [[Alexandra]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20190214143129976" modified="20190310131019697" tags="סדרות טלוויזיה" title="אלמנטרי">
 <pre>[img[pictures/elementary.jpg]]
@@ -12754,7 +12759,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20200213145828705" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20200213150726846" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 
 ''
