--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>James Gandolfini</li>
 
+<li>John Goodman</li>
+
 <li>John Irving</li>
 
 <li>Keep on bleeding</li>
@@ -8262,7 +8264,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213150405466" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213150955260" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8486,7 +8488,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200213150558439" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200213151215832" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
 
 !!![[Yoyo]]:
@@ -8770,6 +8772,12 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 
 </pre>
+</div>
+<div created="20200213150957064" modified="20200213151234534" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
+<pre>
+[img[pictures/john-goodman.jpg]]
+
+ &lt;&lt;heblink [[ג'ון גודמן]]&gt;&gt;</pre>
 </div>
 <div created="20191113143908637" modified="20191113144254373" tags="[[outer sisters]] films" title="John Irving">
 <pre>[img[pictures/john-irving.jpg]]
