--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחות כהן]] אלכסנדרה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213145039564" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213151030388" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10319,7 +10319,7 @@ well,
 בירידה מרוטשילד, [[בשיינקין 59|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f:0x3662145826c17cb6!2m22!2m2!1i80!2i80!3m1!2i20!16m16!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!2m2!1m1!1e6!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], בבוקר, אכרם, חמודי וג'וני, לפעמים פוטנה גם, מחכים עם חיוך, עם החומוס, מרק חם, ופלאפל טוב, לדרים בסביבה וברחוב.
 </pre>
 </div>
-<div created="20170331205112322" modified="20200213150758475" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
+<div created="20170331205112322" modified="20200213151435721" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
 <pre>[img[pictures/alexandra.jpg]]
 
 !!![[גורה]]:
@@ -10871,14 +10871,16 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20171216174635678" modified="20190310131128745" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="ג'ון גודמן">
+<div created="20171216174635678" modified="20200213151513919" tags="[[אחיות חוץ]] סרטים סדרות טלוויזיה" title="ג'ון גודמן">
 <pre>[img[pictures/john-goodman.jpg]]
 
 !!![[יויו]]:
 
 אם תגידו לי [[ג'ון גודמן|http://www.imdb.com/name/nm0000422/]], גם כשאני בשיא הדכדוך זה ישמח אותי ואני אחייך ואזכר בחיוך המתוק הטוב והמצחיק. 
 
-[[דן קונר|http://www.imdb.com/title/tt0094540/characters/nm0000422?ref_=tt_cl_t2]] בעלה של [[רוזאן|http://www.imdb.com/title/tt0094540/?ref_=nmbio_mbio]],  [[וולטר סובצ'אק|http://www.imdb.com/title/tt0118715/characters/nm0000422?ref_=tt_cl_t2]] [[מביג לבובסקי|ביג לבובסקי]], [[פרד פלינסטון|http://www.imdb.com/title/tt0109813/characters/nm0000422?ref_=tt_cl_t1]]  ועוד דמויות סופר אהובות ובלתי נשכחות.</pre>
+[[דן קונר|http://www.imdb.com/title/tt0094540/characters/nm0000422?ref_=tt_cl_t2]] בעלה של [[רוזאן|http://www.imdb.com/title/tt0094540/?ref_=nmbio_mbio]],  [[וולטר סובצ'אק|http://www.imdb.com/title/tt0118715/characters/nm0000422?ref_=tt_cl_t2]] [[מביג לבובסקי|ביג לבובסקי]], [[פרד פלינסטון|http://www.imdb.com/title/tt0109813/characters/nm0000422?ref_=tt_cl_t1]]  ועוד דמויות סופר אהובות ובלתי נשכחות.
+
+&lt;&lt;englink [[John Goodman]]&gt;&gt;</pre>
 </div>
 <div created="20170323221312884" modified="20170703134352456" tags="[[אחות כהן]]" title="ג'ונג">
 <pre>[img[pictures/jong.jpg]]
@@ -12759,7 +12761,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20200213150726846" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20200213151347303" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 
 ''
