--- a/english.html
+++ b/english.html
@@ -279,6 +279,8 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
+<li>David Byrne</li>
+
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -316,6 +318,8 @@ Error message and password prompt
 <li>Iry</li>
 
 <li>James Gandolfini</li>
+
+<li>Jeff Bridges</li>
 
 <li>John Goodman</li>
 
@@ -8244,7 +8248,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[David Byrne]] [[Jeff Bridges]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8264,7 +8268,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213150955260" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213152530918" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8488,7 +8492,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20191113143329168" modified="20200213151215832" tags="music [[outer sisters]]" title="Berry Sakharof">
+<div created="20191113143329168" modified="20200213151935184" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/Berry-Sakharof.jpg]]
 
 !!![[Yoyo]]:
@@ -8593,6 +8597,12 @@ Be good.
 
 </pre>
 </div>
+<div created="20200213152525438" modified="20200213152745210" tags="Music Films [[Outer sisters]]" title="David Byrne">
+<pre>
+[img[pictures/david-byrne.jpg]]
+
+ &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -8655,7 +8665,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[סרטים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213145354960" modified="20200213145601890" tags="[[Coen sister]] Mothers" title="Genevieve">
+<div created="20200213145354960" modified="20200213152652198" tags="[[Coen sister]] Mothers" title="Genevieve">
 <pre>
 [img[pictures/genevieve.jpg]]
 
@@ -8771,6 +8781,15 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
  &lt;&lt;heblink [[ג'יימס גנדולפיני]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200213151742129" modified="20200213152000244" tags="Films [[Outer sisters]] Music" title="Jeff Bridges">
+<pre>
+[img[pictures/jeff-bridges.jpg]]
+
+
+ &lt;&lt;heblink [[ג'ף ברידג'ס]]&gt;&gt;
+ 
 </pre>
 </div>
 <div created="20200213150957064" modified="20200213151234534" tags="[[Outer sisters]] TV [[TV Series]] Films" title="John Goodman">
