--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213151030388" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213152617294" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10910,7 +10910,7 @@ Is where I want to be
 
 חוץ מזה [[שג'ונג|ג'ונג]] מגיע לכל מקום [[במטרו|תחבורה ציבורית]], פעם בחודש בערך הוא לוקח רכבת לליון [[לדו'ג'ו|https://dojolyon.fr/]] של המאסטר שלו [[לאייקידו|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%A7%D7%99%D7%93%D7%95]].</pre>
 </div>
-<div created="20170829074025058" modified="20200213145738120" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20200213152040243" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים טלוויזיה" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 !!![[הצוות]]:
@@ -10936,14 +10936,14 @@ Is where I want to be
 
 [[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
 </div>
-<div created="20171212163308820" modified="20190126102112115" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
+<div created="20171212163308820" modified="20200213152115069" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
 
 !!![[יויו]]:
 
 באתר של [[ג'ף ברידג'ס|http://www.jeffbridges.com/]] אפשר לראות שהוא עושה הרבה דברים כולל הרבה מאד [[סרטים|http://www.jeffbridges.com/filmography.html]]. אווה אומרת שהוא השחקן הכי חתיך שיש, אבל ז'נבייב, שלאחרונה הפכה צופה אדוקה של [[האוס|http://www.imdb.com/title/tt0412142/]] טוענת [[שיו לורי|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] לוקח אותו. גורה אומרת שהוא סופר חתיך ושהיה לה קשה מאד לצייר את כל תווי החתול שלו, בסופו של דבר בחרה תמונה [[מנערי בייקר המופלאים|http://www.imdb.com/title/tt0097322/]]. אני אומר שאני מת על ג'ף ברידג'ס, אבל הכי מהכל הוא [[the dude|http://www.imdb.com/title/tt0118715/characters/nm0000313?ref_=tt_cl_t1]], למרות שבהמלך צילומי הסרט הוא חדל מלעשן מריחואנה. 
 
-</pre>
+&lt;&lt;englink [[Jeff Bridges]]&gt;&gt;</pre>
 </div>
 <div created="20170514214551974" modified="20180420222047482" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
@@ -11785,14 +11785,16 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180123164835249" modified="20190126102217946" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
+<div created="20180123164835249" modified="20200213152953900" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
 
 !!![[יויו]]:
 
 [[תראו אותו|https://www.youtube.com/watch?v=hpPYKJAnwUo]], כבר לא ילד, אבל [[אותו הילד|https://www.youtube.com/watch?v=av3j4WStj2A]].
 
-זה [[דיוויד ביירן|http://davidbyrne.com/]].</pre>
+זה [[דיוויד ביירן|http://davidbyrne.com/]].
+
+&lt;&lt;englink [[David Byrne]]&gt;&gt;</pre>
 </div>
 <div created="20170829174937405" modified="20190310131241746" tags="[[אחיות חוץ]] הסופרנוס מוזיקה טלוויזיה" title="דיוויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
@@ -12761,7 +12763,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20200213151347303" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20200213152832919" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 
 ''
